--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.15",
+    "@google-cloud/storage": "^5.8.4",
+    "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
