--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^7.2.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.4",
