--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.15",
     "@google-cloud/storage": "^5.8.4",
+    "apollo-upload-client": "^14.1.3",
     "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
